# equity-research-writer-basic

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/hooks/: block_secrets.py
.specify/memory/: constitution.md
examples/: sample_input.txt  xanadu_input.txt
specs/001-clean-refactor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-clean-refactor/checklists/: requirements.md
specs/001-clean-refactor/contracts/: api.md
src/equity_research_agent/: __init__.py  cli.py  config.py  llm.py  models.py  prompts.py  renderer.py  storage.py  web.py  workflow.py
src/equity_research_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/equity_research_agent/templates/: index.html
tests/: test_chunking.py  test_cli.py  test_llm.py  test_renderer.py  test_storage.py  test_workflow.py
